--- a/index.html
+++ b/index.html
@@ -20,135 +20,216 @@
             list-style-type: lower-alpha;
         }
         
-        h2 {
-            background-color: #FF6;
+        .class_chapter {
+            background-color: #FF9;
+        }
+
+        .class_contacts {
+            background-color: #CFC;
         }
     </style>
 </head>
 
 <body>
-    <h1>Фестиваль журнала "Квантик" 2022 в Новой школе</h1>
-
-    <p>
-        Дата и место проведения: 29 октября 2022, суббота; Москва, Мосфильмовская улица 88, корпус 5, Новая школа, метро Раменки, Солнцевская (жёлтая) линия.<br><br> Журнал "Квантик": <a href="https://kvantik.com/">kvantik.com</a><br><br> Новая Школа
-        на Мосфильмовской:
-        <a href="https://home.n.school/">home.n.school</a>
-    </p>
-    <p>
-        Я (Полозков Сергей Сергеевич) участвую в фестивале со своими разработками. Вот моя программа на фестивале:
-    </p>
-
-    <ol>
-        <li>Вертушки:
-            <ol>
-                <li>Волчок и колпачок из бумаги</li>
-                <li>Волчок Томсона - перевёртыш тип-топ</li>
-                <li>Волчок Томсона из пинг-понговских мячей</li>
-                <li>Бумажный вертолёт</li>
-            </ol>
-        </li>
-        <li>Флексагоны:
-            <ol>
-                <li>Тримино-трансформер</li>
-                <li>Восьмёрка двухцветная</li>
-                <li>Квадратный без клея</li>
-                <li>Лента из треугольников</li>
-            </ol>
-        </li>
-        <li>Цепочки:
-            <ol>
-                <li>Цепь Герона</li>
-                <li>Лестница Якова</li>
-            </ol>
-        </li>
-        <li>Конструкторы:
-            <ol>
-                <li>Магнитные гибкие</li>
-                <li>Трубогранники разборные</li>
-                <li>Гибий пластиковый на кнопках</li>
-            </ol>
-        </li>
-        <li>Авторские головоломки:
-            <ol>
-                <li>Бесконечные соты</li>
-                <li>Европодвесы</li>
-                <li>Пирамиды из шаров</li>
-                <li>Магнитный углокуб</li>
-                <li>Магнитный шахматный куб Сома</li>
-            </ol>
-        </li>
-    </ol>
-
-    <p>Страницы Полозкова Сергея Сергеевича для связи:<br><br> Телеграм:
-        <br>
-        <a href="https://t.me/polozkov94">t.me/polozkov94</a><br> ГИТХАБ:
-        <br>
-        <a href="https://github.com/polozkov">github.com/polozkov</a><br> ВКонтакте:
-        <br>
-        <a href="https://vk.com/polozkov94">vk.com/polozkov94</a><br>
-    </p>
-
-    <h1>Полозков Сергей - описание авторских проектов</h1>
-
     <div>
-        <h2>Вертушки.</h2>
+        <h1>Фестиваль журнала "Квантик" 2022 в Новой школе</h1>
 
-        <h3>Вертушка. Волчок и колпачок из бумаги.</h3>
-        <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-10, стр. 18-19 в разделе "Своими руками". Две оригами фигуры. Квадрат со сторонй 10 см. из плотной бумаге складывается в "тюльман", а сверху надевается колпачок из квадрата со стороной 8
-            см. Колпачок - это оригами-фигура "двойной треугольник".</p>
+        <p>
+            Дата и место проведения: 29 октября 2022, суббота; Москва, Мосфильмовская улица 88, корпус 5, Новая школа, метро Раменки, Солнцевская (жёлтая) линия.<br><br> Журнал "Квантик": <a href="https://kvantik.com/">kvantik.com</a><br><br> Новая Школа
+            на Мосфильмовской:
+            <a href="https://home.n.school/">home.n.school</a>
+        </p>
+        <p>
+            Я (Полозков Сергей Сергеевич) участвую в фестивале со своими разработками. Вот моя программа на фестивале:
+        </p>
 
-        <h3>Вертушка. Волчок Томсона - перевёртыш тип-топ.</h3>
-        <p>Сфера с выемкой и ножной. При вращении волчок встаёт на ножку. Материал: металл, дерево, пластик. Деревянные волчки хорошего качества Российского производства.</p>
+        <ol>
+            <li>
+                <div class="class_chapter">Вертушки:</div>
+                <ol>
+                    <li>Волчок и колпачок из бумаги</li>
+                    <li>Волчок Томсона - перевёртыш тип-топ</li>
+                    <li>Волчок Томсона из пинг-понговских мячей</li>
+                    <li>Бумажный вертолёт</li>
+                </ol>
+            </li>
+            <li>
+                <div class="class_chapter">Флексагоны:</div>
+                <ol>
+                    <li>Тримино-трансформер</li>
+                    <li>Восьмёрка двухцветная</li>
+                    <li>Квадратный без клея</li>
+                    <li>Лента из треугольников</li>
+                </ol>
+            </li>
+            <li>
+                <div class="class_chapter">Цепочки:</div>
+                <ol>
+                    <li>Цепь Герона</li>
+                    <li>Лестница Якова</li>
+                </ol>
+            </li>
+            <li>
+                <div class="class_chapter">Конструкторы:</div>
+                <ol>
+                    <li>Магнитные гибкие</li>
+                    <li>Трубогранники разборные</li>
+                    <li>Гибий пластиковый на кнопках</li>
+                </ol>
+            </li>
+            <li>
+                <div class="class_chapter">Авторские головоломки:</div>
+                <ol>
+                    <li>Бесконечные соты</li>
+                    <li>Европодвесы</li>
+                    <li>Пирамиды из шаров</li>
+                    <li>Магнитный углокуб</li>
+                    <li>Магнитный шахматный куб Сома</li>
+                </ol>
+            </li>
+        </ol>
 
-        <h3>Вертушка. Перевёртыш из пинг-понговских мячей.</h3>
-        <p>Автор: Полозков С.С. Готовится публикация в Квантике в 2023 году. Двя мячика разных цветов вставляются один в другой, внутри крышка из-под бутылки с отверстием для дюбеля, куда проходит самореза. При вращении шар поднимает центр тяжести (переворачивается
-            другим цветом кверху). Шар уменьшает скорость и переворачивается обратно.</p>
+        <p class = "class_contacts">Страницы Полозкова Сергея Сергеевича для связи:<br><br> Телеграм:
+            <br>
+            <a href="https://t.me/polozkov94">t.me/polozkov94</a><br> ГИТХАБ:
+            <br>
+            <a href="https://github.com/polozkov">github.com/polozkov</a><br> ВКонтакте:
+            <br>
+            <a href="https://vk.com/polozkov94">vk.com/polozkov94</a><br><br>
+        </p>
 
-        <h3>Вертушка. Бумажный вертолёт.</h3>
-        <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-08, стр. 24-25 в разделе "Своими руками". В прямоугольной бумажной заготовки делаем два Г-ограззных надлеза, сворачиваем изогнутый треугольник с углом 30 градусов в нижней части. При падении
-            вертолёт вращается. Может использоваться как визитка.</p>
     </div>
     <div>
-        <h2>Флексагоны.</h2>
+        <h1>Полозков Сергей - описание авторских проектов</h1>
+        <div>
+            <h2 class="class_chapter">Вертушки.</h2>
 
-        <h3>Флексагон. Тримино-трансформер.</h3>
-        <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-05, стр. 14-18 в разделе "Игры и головоломки". Трансформер - это три квадратных бумажных флексагона, которые принимают форму "палочки", "ступеньки" и "пропеллера". Ещё тримино может выворачиваться
-            наоборот (внутренние части будут наружними).</p>
+            <h3>Вертушка. Волчок и колпачок из бумаги.</h3>
+            <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-10, стр. 18-19 в разделе "Своими руками". Две оригами фигуры. Квадрат со сторонй 10 см. из плотной бумаге складывается в "тюльман", а сверху надевается колпачок из квадрата со стороной
+                8 см. Колпачок - это оригами-фигура "двойной треугольник".</p>
 
-        <h3>Флексагон. Восьмёрка двухцветная.</h3>
-        <p>Автор: Полозков С.С. Продолжение флексотримино, состоящие из двух простейших гексафлексагонов, соединённых вместе восьмёркой. Каждый шестиугольник восьмёрки имеет свой цвет. (Например, изготовлен из бумаги своего цвета). Цвета могут перемешиваться.
-            Отличный подарок на восьмое марта, ко дню рождения восмого числа и/или восьмого месяца. Восьмёрка собирается из Конструктора "Кликко", фирма "Знаток".</p>
+            <h3>Вертушка. Волчок Томсона - перевёртыш тип-топ.</h3>
+            <p>Сфера с выемкой и ножной. При вращении волчок встаёт на ножку. Материал: металл, дерево, пластик. Деревянные волчки хорошего качества Российского производства.</p>
 
-        <h3>Флексагон. Квадратный без клея.</h3>
-        <p>Усовершенствованный флексагон из журнала "Наука и Жизнь" 1976-09, стр. 121-123. Усовершенствована технология: с лицевой стороны печатаются линии и большие цифры. На обороте линий нет - только маленькие цифры. Бумага при печати может "съехать"
-            - а из-за маленького размера цифр они поместятся. Надрезы делаются с запасом.</p>
+            <h3>Вертушка. Перевёртыш из пинг-понговских мячей.</h3>
+            <p>Автор: Полозков С.С. Готовится публикация в Квантике в 2023 году. Двя мячика разных цветов вставляются один в другой, внутри крышка из-под бутылки с отверстием для дюбеля, куда проходит самореза. При вращении шар поднимает центр тяжести (переворачивается
+                другим цветом кверху). Шар уменьшает скорость и переворачивается обратно.</p>
 
-        <h3>Флексагон. Лента из треугольников.</h3>
-        <p> Упрощённая версия известной головоломки
-            <a href="http://www.mathkang.org/cite/ligamino.html">Лигамино (ссылка).</a> Китайская головоломка разбирается на треугольники 45-45-90. Разбираемость конструкции поможет решить задачу №52 из конкурса "Квантика" за 2022 год. Автор: Дмитрий Калинин. Условие.
-            У Квантика была пустая, закрытая со всех сторон картонная кубическая коробка. Он разрезал каждую из шести граней этой коробки по какой-то из диагоналей. Могла ли коробка после этого не развалиться на отдельные части?
+            <h3>Вертушка. Бумажный вертолёт.</h3>
+            <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-08, стр. 24-25 в разделе "Своими руками". В прямоугольной бумажной заготовки делаем два Г-ограззных надлеза, сворачиваем изогнутый треугольник с углом 30 градусов в нижней части. При
+                падении вертолёт вращается. Может использоваться как визитка.</p>
+        </div>
+        <div>
+            <h2 class="class_chapter">Флексагоны.</h2>
+
+            <h3>Флексагон. Тримино-трансформер.</h3>
+            <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-05, стр. 14-18 в разделе "Игры и головоломки". Трансформер - это три квадратных бумажных флексагона, которые принимают форму "палочки", "ступеньки" и "пропеллера". Ещё тримино может
+                выворачиваться наоборот (внутренние части будут наружними).</p>
+
+            <h3>Флексагон. Восьмёрка двухцветная.</h3>
+            <p>Автор: Полозков С.С. Продолжение флексотримино, состоящие из двух простейших гексафлексагонов, соединённых вместе восьмёркой. Каждый шестиугольник восьмёрки имеет свой цвет. (Например, изготовлен из бумаги своего цвета). Цвета могут перемешиваться.
+                Отличный подарок на восьмое марта, ко дню рождения восмого числа и/или восьмого месяца. Восьмёрка собирается из Конструктора "Кликко", фирма "Знаток".</p>
+
+            <h3>Флексагон. Квадратный без клея.</h3>
+            <p>Усовершенствованный флексагон из журнала "Наука и Жизнь" 1976-09, стр. 121-123. Усовершенствована технология: с лицевой стороны печатаются линии и большие цифры. На обороте линий нет - только маленькие цифры. Бумага при печати может "съехать"
+                - а из-за маленького размера цифр они поместятся. Надрезы делаются с запасом.</p>
+
+            <h3>Флексагон. Лента из треугольников.</h3>
+            <p> Упрощённая версия известной головоломки
+                <a href="http://www.mathkang.org/cite/ligamino.html">Лигамино (ссылка).</a> Китайская головоломка разбирается на треугольники 45-45-90. Разбираемость конструкции поможет решить задачу №52 из конкурса "Квантика" за 2022 год. Автор: Дмитрий
+                Калинин. Условие. У Квантика была пустая, закрытая со всех сторон картонная кубическая коробка. Он разрезал каждую из шести граней этой коробки по какой-то из диагоналей. Могла ли коробка после этого не развалиться на отдельные части?
+                <p>
+        </div>
+        <div>
+            <h2>Цепочки.</h2>
+            <h3>Цепочка. Цепь Герона.</h3>
             <p>
-    </div>
-    <div>
-        <h2>Цепочки.</h2>
-        <h3>Цепочка. Цепь Герона.</h3>
-        <h3>Цепочка. Лестница Якова.</h3>
-    </div>
-    <div>
-        <h2>Конструкторы.</h2>
-        <h3>Конструктор. Магнитный гибкий.</h3>
-        <h3>Конструктор. Трубогранник разборный.</h3>
-        <h3>Конструктор. Гибкий пластиковый на кнопках.</h3>
-    </div>
-    <div>
-        <h2>Авторские головоломки.</h2>
-        <h3>Головоломка. Бесконечная сота.</h3>
-        <h3>Головоломка. Европодвес.</h3>
-        <h3>Головоломка. Пирамида из шаров.</h3>
-        <h3>Головоломка. Магнитный углокуб.</h3>
-        <h3>Головоломка. Магнитный шахматный куб Сома.</h3>
+                По легенде Герон Александрийский (в школе изучают формулу Героная для площади треугольника) зарабатывал себе на жизнь, показывая фокус с такой цепью. Такую цепь можно изготовить самим из металлических колец для ключей. Отлично подойдут специальные кольца
+                с замочком. Если приподнять цепочку за нужное кольцо, возникает иллюзия падения (перекатывание) с приятныым звуком.
+            </p>
+            <h3>Цепочка. Лестница Якова.</h3>
+            <p>
+                Народная игрушка, в английской Википедии <a href="https://en.wikipedia.org/wiki/Jacob%27s_ladder_(toy)">сатья,</a> где указано, что первое письменное упоминание о Лестице Якова в журнале "Scientific American" за 1889 год. Есть деревянная
+                версия, однако можно сделать самому из игральных карт, монеток (в качестве грузиков), атласных лент и двойного скотча и/или клея. Вместо игральных карт можно взять цветной картон, багет, обложки для переплёта, фишки домино и т. д. Как
+                и в цепи Герона возникает иллюзия падения блока (перекатывание).
+            </p>
+        </div>
+        <div>
+            <h2 class="class_chapter">Конструкторы.</h2>
+            <h3>Конструктор. Магнитный гибкий.</h3>
+            <p> Гибкий конструктор из пластиковых полосок с магнитами на концах на скотче. Материал основы - обложки для переплёта из пластика. Магниты крепятся одной полярностью.
+            </p>
+            <h3>Конструктор. Трубогранник разборный.</h3>
+            <p>
+                За основу взят<a href="http://ipuzzles.ru/topological-puzzles/govard-flesher-puzzle/"> трубограниик Говарда Флейшера.</a> Резинка проходит не сквозь всю трубочку, а крепится только на концах. Три резинки не вершине куба соединены трилистноком
+                и крыпятся через надрезы.
+            </p>
+            <h3>Конструктор. Гибкий пластиковый на кнопках.</h3>
+            <p>
+                Гибкий прямоугольник с двумя отверстиями и двумя креплениями. Отверстия и крепления находятся на углах крест-накрест. Элементы отличаются лишь цветом. Бывает жёсткая весрия конструктора и мягкая.
+            </p>
+        </div>
+        <div>
+            <h2 class="class_chapter">Авторские головоломки.</h2>
+            <h3>Головоломка. Бесконечная сота.</h3>
+            <p>
+                Переделанный "бесконечный куб", который срезали но шестиугольной соты превращается в восьмёрку. Уникальность в том, что для решения необходимо поворачивать все 8 блоков, соединённых друг с другом по циклу восемью петлями. Сама головоломка изготовлена
+                3Д печатью, а крепления взяты из китайской версии.
+            </p>
+            <h3>Головоломка. Европодвес.</h3>
+            <p>
+                Головоломка похожа по принципу решения на "Ложку" Кирилла Павловича Гребнева. Однока основа пластиковая - подвес для рожкового гаечного ключа. Чтобы его не выбрасывать, из него делается головоломка с верёвкой и цельным металлическим кольцом.
+            </p>
+            <h3>Головоломка. Пирамида из шаров.</h3>
+            <p>
+                Цель - собрать пиравиду из шаров. Простая версия - трёхэтажный тетраэдр из двуз палочек-трёшек и квадрата (всего 10 шаров). Средняя версия - четырёхэтажная из двух палочек-четвёрок, и двух прямоугольников 2 на 3 (20 шаров). Продвинутые версии - четырёхэтажная из четырёх галочек, затем четырёхэтажная из четырёх "пистолетиков". Очень продвинутые - четырёхэтажные из двух правых и двух левых "узлов". Наиболее интересны две очень продвинутые версии. Есть ещё две версии на сборку усечёного тетраэдра.
+                Авторский вклад - в технологии изготовления: мягкие шары из материала Fom-Eva соединять зубочистками.
+                <ol>
+                    <li>палка3*2, квадрат22</li>
+                    <li>палка4*4, прямоугольник23*2</li>
+                    <li>галочка5*4</li>
+                    <li>пистолет5*4</li>
+                    <li>(Правый узел_А + Левый узел_А) * 2</li>
+                    <li>(Правый узел_Б + Левый узел_Б) * 2</li>
+                    <li>усечённая пирамида, 4 флажка</li>
+                    <li>усечённая пирамида, 4 буквы "Г"</li>
+                </ol>
+
+            </p>
+            <h3>Головоломка. Магнитный углокуб.</h3>
+            <p>
+                Головоломка - куб 2 на 2 на 2, на каждой крани в середине квадрата магнит. Есть ещё 8 уголков, которые магнитятся к поверхности. На лицевой стороне каждого уголка тёмный или светлый квадрат. Всего 2^3 = 8 вариантов. Уголок имеет три положения: на гране,
+                на ребре и на вершине. Задания:
+                <ol>
+                    <li>Просто обклеить всю поверхность</li>
+                    <li>Обклеить так, чтоб не было уголков на вершине</li>
+                    <li>Так, чтобы были и на грани, и на ребре, и на вершине</li>
+                    <li>Так, чтобы все грани были шахматные</li>
+                    <li>Так, чтобы все грани были полосками 2+2</li>
+                    <li>Так, чтобы все грани были разные</li>
+                    <li>Так, чтобы цвета были зеркальны (справа и слева)</li>
+                    <li>Так, чтобы цвета были зеркальны (плоскость под 45°)</li>
+                    <li>Налепить 5 уголков, чтобы для шестого не было места</li>
+                </ol>
+            </p>
+            <h3>Головоломка. Магнитный шахматный куб Сома.</h3>
+            <p>
+                Кубик сома, где все элементы шахматные (красно-синие цвета). Противоположные кубики притягиваются. На каждом кубе 6 магнитов. Всего элементов не 7, а 8. Большая буква "Г" в двух вариантах. Когда на изломе синий цвет - собрать куб 3на3на3 легко, а когда
+                красный цвет - это задание для продвинутых.
+            </p>
+        </div>
     </div>
 
+    <div>
+        <p class = "class_contacts">Страницы Полозкова Сергея Сергеевича для связи:<br><br> Телеграм:
+            <br>
+            <a href="https://t.me/polozkov94">t.me/polozkov94</a><br> ГИТХАБ:
+            <br>
+            <a href="https://github.com/polozkov">github.com/polozkov</a><br> ВКонтакте:
+            <br>
+            <a href="https://vk.com/polozkov94">vk.com/polozkov94</a><br><br>
+        </p>
+    </div>
 </body>
 
 </html>
