Update index.html ГРАММАТИЧЕСКИЕ ОШИБКИ

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <ol>
                     <li>Магнитные гибкие</li>
                     <li>Трубогранники разборные</li>
-                    <li>Гибий пластиковый на кнопках</li>
+                    <li>Гибкий пластиковый на кнопках</li>
                 </ol>
             </li>
             <li>
@@ -107,18 +107,18 @@
             <h2 class="class_chapter">Вертушки.</h2>
 
             <h3>Вертушка. Волчок и колпачок из бумаги.</h3>
-            <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-10, стр. 18-19 в разделе "Своими руками". Две оригами фигуры. Квадрат со сторонй 10 см. из плотной бумаге складывается в "тюльман", а сверху надевается колпачок из квадрата со стороной
+            <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-10, стр. 18-19 в разделе "Своими руками". Две оригами фигуры. Квадрат со стороной 10 см. из плотной бумаге складывается в "тюльпан", а сверху надевается колпачок из квадрата со стороной
                 8 см. Колпачок - это оригами-фигура "двойной треугольник".</p>
 
             <h3>Вертушка. Волчок Томсона - перевёртыш тип-топ.</h3>
             <p>Сфера с выемкой и ножной. При вращении волчок встаёт на ножку. Материал: металл, дерево, пластик. Деревянные волчки хорошего качества Российского производства.</p>
 
             <h3>Вертушка. Перевёртыш из пинг-понговских мячей.</h3>
-            <p>Автор: Полозков С.С. Готовится публикация в Квантике в 2023 году. Двя мячика разных цветов вставляются один в другой, внутри крышка из-под бутылки с отверстием для дюбеля, куда проходит самореза. При вращении шар поднимает центр тяжести (переворачивается
+            <p>Автор: Полозков С.С. Готовится публикация в Квантике в 2023 году. Два мячика разных цветов вставляются один в другой, внутри крышка из-под бутылки с отверстием для дюбеля, куда проходит самореза. При вращении шар поднимает центр тяжести (переворачивается
                 другим цветом кверху). Шар уменьшает скорость и переворачивается обратно.</p>
 
             <h3>Вертушка. Бумажный вертолёт.</h3>
-            <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-08, стр. 24-25 в разделе "Своими руками". В прямоугольной бумажной заготовки делаем два Г-ограззных надлеза, сворачиваем изогнутый треугольник с углом 30 градусов в нижней части. При
+            <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-08, стр. 24-25 в разделе "Своими руками". В прямоугольной бумажной заготовки делаем два Г-образных надреза, сворачиваем изогнутый треугольник с углом 30 градусов в нижней части. При
                 падении вертолёт вращается. Может использоваться как визитка.</p>
         </div>
         <div>
@@ -126,11 +126,11 @@
 
             <h3>Флексагон. Тримино-трансформер.</h3>
             <p>Автор: Полозков С.С. Публикация в журнале "Квантик" 2022-05, стр. 14-18 в разделе "Игры и головоломки". Трансформер - это три квадратных бумажных флексагона, которые принимают форму "палочки", "ступеньки" и "пропеллера". Ещё тримино может
-                выворачиваться наоборот (внутренние части будут наружними).</p>
+                выворачиваться наоборот (внутренние части будут наружными).</p>
 
             <h3>Флексагон. Восьмёрка двухцветная.</h3>
             <p>Автор: Полозков С.С. Продолжение флексотримино, состоящие из двух простейших гексафлексагонов, соединённых вместе восьмёркой. Каждый шестиугольник восьмёрки имеет свой цвет. (Например, изготовлен из бумаги своего цвета). Цвета могут перемешиваться.
-                Отличный подарок на восьмое марта, ко дню рождения восмого числа и/или восьмого месяца. Восьмёрка собирается из Конструктора "Кликко", фирма "Знаток".</p>
+                Отличный подарок на 8 Марта, ко дню рождения (восьмого числа и/или восьмого месяца). Восьмёрка собирается из Конструктора "Klikko", фирма "Знаток".</p>
 
             <h3>Флексагон. Квадратный без клея.</h3>
             <p>Усовершенствованный флексагон из журнала "Наука и Жизнь" 1976-09, стр. 121-123. Усовершенствована технология: с лицевой стороны печатаются линии и большие цифры. На обороте линий нет - только маленькие цифры. Бумага при печати может "съехать"
@@ -146,12 +146,12 @@
             <h2>Цепочки.</h2>
             <h3>Цепочка. Цепь Герона.</h3>
             <p>
-                По легенде Герон Александрийский (в школе изучают формулу Героная для площади треугольника) зарабатывал себе на жизнь, показывая фокус с такой цепью. Такую цепь можно изготовить самим из металлических колец для ключей. Отлично подойдут специальные кольца
-                с замочком. Если приподнять цепочку за нужное кольцо, возникает иллюзия падения (перекатывание) с приятныым звуком.
+                По легенде Герон Александрийский (в школе изучают формулу Герона для площади треугольника) зарабатывал себе на жизнь, показывая фокус с такой цепью. Такую цепь можно изготовить самим из металлических колец для ключей. Отлично подойдут специальные кольца
+                с замочком. Если приподнять цепочку за нужное кольцо, возникает иллюзия падения (перекатывание) с приятным звуком.
             </p>
             <h3>Цепочка. Лестница Якова.</h3>
             <p>
-                Народная игрушка, в английской Википедии <a href="https://en.wikipedia.org/wiki/Jacob%27s_ladder_(toy)">сатья,</a> где указано, что первое письменное упоминание о Лестице Якова в журнале "Scientific American" за 1889 год. Есть деревянная
+                Народная игрушка, в английской Википедии <a href="https://en.wikipedia.org/wiki/Jacob%27s_ladder_(toy)">сатья,</a> где указано, что первое письменное упоминание о Лестнице Якова в журнале "Scientific American" за 1889 год. Есть деревянная
                 версия, однако можно сделать самому из игральных карт, монеток (в качестве грузиков), атласных лент и двойного скотча и/или клея. Вместо игральных карт можно взять цветной картон, багет, обложки для переплёта, фишки домино и т. д. Как
                 и в цепи Герона возникает иллюзия падения блока (перекатывание).
             </p>
@@ -163,12 +163,12 @@
             </p>
             <h3>Конструктор. Трубогранник разборный.</h3>
             <p>
-                За основу взят<a href="http://ipuzzles.ru/topological-puzzles/govard-flesher-puzzle/"> трубограниик Говарда Флейшера.</a> Резинка проходит не сквозь всю трубочку, а крепится только на концах. Три резинки не вершине куба соединены трилистноком
-                и крыпятся через надрезы.
+                За основу взят<a href="http://ipuzzles.ru/topological-puzzles/govard-flesher-puzzle/"> трубограниик Говарда Флейшера.</a> Резинка проходит не сквозь всю трубочку, а крепится только на концах. Три резинки не вершине куба соединены трилистником
+                и крепятся через надрезы.
             </p>
             <h3>Конструктор. Гибкий пластиковый на кнопках.</h3>
             <p>
-                Гибкий прямоугольник с двумя отверстиями и двумя креплениями. Отверстия и крепления находятся на углах крест-накрест. Элементы отличаются лишь цветом. Бывает жёсткая весрия конструктора и мягкая.
+                Гибкий прямоугольник с двумя отверстиями и двумя креплениями. Отверстия и крепления находятся на углах крест-накрест. Элементы отличаются лишь цветом. Бывает жёсткая версия конструктора и мягкая.
             </p>
         </div>
         <div>
@@ -180,11 +180,11 @@
             </p>
             <h3>Головоломка. Европодвес.</h3>
             <p>
-                Головоломка похожа по принципу решения на "Ложку" Кирилла Павловича Гребнева. Однока основа пластиковая - подвес для рожкового гаечного ключа. Чтобы его не выбрасывать, из него делается головоломка с верёвкой и цельным металлическим кольцом.
+                Головоломка похожа по принципу решения на "Ложку" Кирилла Павловича Гребнева. Однако, основа пластиковая - подвес для рожкового гаечного ключа. Чтобы его не выбрасывать, из него делается головоломка с верёвкой и цельным металлическим кольцом.
             </p>
             <h3>Головоломка. Пирамида из шаров.</h3>
             <p>
-                Цель - собрать пиравиду из шаров. Простая версия - трёхэтажный тетраэдр из двуз палочек-трёшек и квадрата (всего 10 шаров). Средняя версия - четырёхэтажная из двух палочек-четвёрок, и двух прямоугольников 2 на 3 (20 шаров). Продвинутые версии - четырёхэтажная из четырёх галочек, затем четырёхэтажная из четырёх "пистолетиков". Очень продвинутые - четырёхэтажные из двух правых и двух левых "узлов". Наиболее интересны две очень продвинутые версии. Есть ещё две версии на сборку усечёного тетраэдра.
+                Цель - собрать пирамиду из шаров. Простая версия - трёхэтажный тетраэдр из двуз палочек-трёшек и квадрата (всего 10 шаров). Средняя версия - четырёхэтажная из двух палочек-четвёрок, и двух прямоугольников 2 на 3 (20 шаров). Продвинутые версии - четырёхэтажная из четырёх галочек, затем четырёхэтажная из четырёх "пистолетиков". Очень продвинутые - четырёхэтажные из двух правых и двух левых "узлов". Наиболее интересны две очень продвинутые версии. Есть ещё две версии на сборку усечённого тетраэдра.
                 Авторский вклад - в технологии изготовления: мягкие шары из материала Fom-Eva соединять зубочистками.
                 <ol>
                     <li>палка3*2, квадрат22</li>
@@ -200,7 +200,7 @@
             </p>
             <h3>Головоломка. Магнитный углокуб.</h3>
             <p>
-                Головоломка - куб 2 на 2 на 2, на каждой крани в середине квадрата магнит. Есть ещё 8 уголков, которые магнитятся к поверхности. На лицевой стороне каждого уголка тёмный или светлый квадрат. Всего 2^3 = 8 вариантов. Уголок имеет три положения: на гране,
+                Головоломка - куб 2 на 2 на 2, на поверхности в каждой ячейке (в середине квадрата) магнит (грань состоит из 4 квадратных ячеек). Есть ещё 8 уголков, которые магнитятся к поверхности. На лицевой стороне каждого уголка тёмный или светлый квадрат. Всего 2^3 = 8 вариантов. Уголок имеет три положения: на гране,
                 на ребре и на вершине. Задания:
                 <ol>
                     <li>Просто обклеить всю поверхность</li>
@@ -209,8 +209,8 @@
                     <li>Так, чтобы все грани были шахматные</li>
                     <li>Так, чтобы все грани были полосками 2+2</li>
                     <li>Так, чтобы все грани были разные</li>
-                    <li>Так, чтобы цвета были зеркальны (справа и слева)</li>
-                    <li>Так, чтобы цвета были зеркальны (плоскость под 45°)</li>
+                    <li>Так, чтобы цвета были зеркальными (справа и слева)</li>
+                    <li>Так, чтобы цвета были зеркальными (плоскость под 45°)</li>
                     <li>Налепить 5 уголков, чтобы для шестого не было места</li>
                 </ol>
             </p>
