Update index.html add 2023 link

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h1>Фестиваль журнала "Квантик" 2022 в Новой школе</h1>
 
         <p>
+            <a href="https://polozkov.github.io/kvantikfest2023/">В 2023 году - НОВАЯ СТРАНИЦА</a><br> Ниже информация о фестивале 2022 года.
             Дата и место проведения: 29 октября 2022, суббота; Москва, Мосфильмовская улица 88, корпус 5, Новая школа, метро Раменки, Солнцевская (жёлтая) линия.<br><br> Журнал "Квантик": <a href="https://kvantik.com/">kvantik.com</a><br><br> Новая Школа
             на Мосфильмовской:
             <a href="https://home.n.school/">home.n.school</a>
